<resources>
    <string name="app_name">Kotlin-Library</string>
    <string name="geocoder_endpoint">https://services.gisgraphy.com</string>

    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Septiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>

    <string name="fingerprint_title">Autenticación</string>
    <string name="fingerprint_message">Coloca tu huella para autenticarte</string>
    <string name="fingerprint_default_status">Toca sensor</string>
    <string name="fingerprint_cancel">Cancelar</string>
    <string name="fingerprint_alt_method">Usar contraseña</string>
    <string name="fingerprint_auth_failed">Huella no reconocida</string>
    <string name="fingerprint_auth_succeeded">Autenticación exitosa</string>
</resources>
